--- a/portofolio/projects.json
+++ b/portofolio/projects.json
@@ -3,7 +3,7 @@
         "name": "ChilledChino",
         "description": "A totally free multipurpose discord bot that has a lot of features such as high quality music, image generations, economy, leveling, moderation, and many more!",
         "public": true,
-        "avatar": "https://i.imgur.com/8sg7m7o.png",
+        "avatar": "https://i.imgur.com/6hr49Ub.jpeg",
         "links": [
             {
                 "name": "Invite Me",
